--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Password Generator</title>
-  <link rel="stylesheet" href="./develop/style.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -48,7 +48,7 @@
       </div>
     </div>
   </div>
-  <script src="./develop/script.js"></script>
+  <script src="./develop/script.js" type="text/javascript"></script>
 </body>
 
 </html>
