--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
     </div>
   </div>
-  <script src="./develop/script.js" type="text/javascript"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
